[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7", features = ["http2", "query", "tracing"] }
dashmap = "5.5.3"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["fs", "rt", "rt-multi-thread", "macros",] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
